# unmute

./: .firebaserc  .gitignore  DOCKER_README.md  Dockerfile  GCS_SETUP.md  README.md  VERCEL_ENV_SETUP.md  analysis.ipynb  docker-compose.yml  firebase.json  gcs.py  hand.txt  pose.txt  resp.txt  unmute.db
__MACOSX/: ._sgsl_processed
backend/: .dockerignore  Dockerfile  app.py  auth.py  azure_openai_client.py  database.py  docker-compose.yml  gcs_storage.py  gemini_client.py  hand_embedder.py  llm_client.py  openai_client.py  planner.py  pyproject.toml  requirements.txt  sign_seq.py  tag_config.json  vocab.json  vocab.py
backend/lessons/: lesson-01-greetings.json  lesson-01-neighborhoods.json  lesson-02-feelings.json  lesson-02-food-court.json  lesson-03-colours.json  lesson-03-family.json  lesson-04-family.json  lesson-04-questions.json  lesson-05-emotions.json  lesson-05-numbers.json  lesson-06-colors.json  lesson-06-days-and-calendar.json  lesson-07-food.json
docs/: BACKEND_DEPLOYMENT.md  DOCKER_SETUP.md  FRONTEND_DEPLOYMENT.md  GCS_SETUP.md  GEMINI_KEY_ROTATION.md
frontend/: ENV_README.md  avatar.js  index.html  package-lock.json  package.json  script.js
scripts/: README.md  build_vocab_from_json.py  clean_dataset.py  demo_pipeline.py  deploy.sh  generate_pose_data.py  list_models.py  migrate_dataset.py  migrate_pkl.py  preprocess_gifs_to_pkl.py  save_detection_gifs.py  scrape.py  set_admin_claim.py  softdtw_nn_pipeline.py  test_planner.py  test_preprocess_visualize.py  verify_api.py  verify_vocab.py  webcam_demo.py
unmute-fe/: ENV_README.md  index.html  (+4 more)
(+62 files in other folders)
