[project]
name = "unmute-backend"
version = "0.1.0"
description = "FastAPI backend for Unmute Singapore Sign Language translation"
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi==0.128.0",
    "firebase-admin==6.7.0",
    "google-cloud-storage==2.18.2",
    "google-genai==1.57.0",
    "mediapipe==0.10.21",
    "numpy==1.26.4",
    "opencv-contrib-python==4.11.0.86",
    "opencv-python==4.11.0.86",
    "pillow==11.2.1",
    "pydantic==2.12.5",
    "pydub==0.25.1",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.21",
    "uvicorn==0.40.0",
]

[tool.uv]
package = false
